name change to pacelab => version 2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codeshare",
-  "version": "1.0.0",
+  "name": "PaceLab",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
