--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
-name: Cron @ 😴
+name: Clear DB TrashBin
 on:
   schedule:
-    - cron: '5 12 * * *'
+    - cron: '5 0 * * *'
 
   workflow_dispatch:
 
